# DefaultingUserManagement

./: .dockerignore  .env.example  .gitignore  02_进度计划表.md  API.md  Dockerfile  Makefile  README.md  alembic.ini  dev.db  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  report_backend.xml  requirements.md  requirements.txt  tech.md  test.db
.github/workflows/: deploy-pages.yml  publish-ghcr.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_ip_to_audit.py
app/: audit.py  deps.py  main.py  models.py  schemas.py  security.py  storage.py
app/core/: config.py
app/routers/: applications.py  audit_logs.py  auth.py  customers.py  notifications.py  reasons.py  stats.py  users.py
docs/: 02_进度计划表.md  03_沟通讨论记录.md  04_项目需求.md  06_答辩PPT.md  07_技术文档.md  TEST_REPORT.md  requirements.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  routes.tsx
frontend/src/lib/: http.ts
frontend/src/pages/: Applications.tsx  Audit.tsx  Customers.tsx  Login.tsx  Reasons.tsx  Stats.tsx  Users.tsx
frontend/src/stores/: auth.ts
frontend/src/tests/: smoke.spec.tsx
nginx/: default.conf
scripts/: package_release.sh  seed_demo_data.py
tests/: conftest.py  test_e2e.py  test_edge.py  test_more.py  test_more2.py  test_smoke.py
